FILE(GLOB_RECURSE BUILD_HEADERS CONFIGURE_DEPENDS 
    "${CRYPT_HEADERS}/*.hpp"
)

FILE(GLOB_RECURSE BUILD_FILE_LIST CONFIGURE_DEPENDS 
    "*.cpp"
)

ADD_LIBRARY(libcrypt STATIC ${BUILD_HEADERS} ${BUILD_FILE_LIST})

TARGET_INCLUDE_DIRECTORIES(libcrypt PRIVATE "${CRYPT_HEADERS}")
TARGET_INCLUDE_DIRECTORIES(libcrypt PRIVATE "${CRYPT_ROOT}/source")

IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
	SET_TARGET_PROPERTIES(libcrypt PROPERTIES OUTPUT_NAME "libcrypt_d")
ELSEIF(CMAKE_BUILD_TYPE STREQUAL "Release")
	SET_TARGET_PROPERTIES(libcrypt PROPERTIES OUTPUT_NAME "libcrypt")
ENDIF()

SET_TARGET_PROPERTIES(libcrypt PROPERTIES LINKER_LANGUAGE CXX)

IF(UNIX AND CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
    SET_TARGET_PROPERTIES(libcrypt PROPERTIES PREFIX "")
ELSEIF(MSVC)
    IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
		TARGET_LINK_OPTIONS(libcrypt PRIVATE "/LTCG- /DEBUG")
    ELSEIF(CMAKE_BUILD_TYPE STREQUAL "Release")
        TARGET_LINK_OPTIONS(libcrypt PRIVATE "/LTCG-")
    ENDIF()
ENDIF()